<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AWTY?!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">Are we there yet?!</string>
    <string name="message">Message:</string>
    <string name="send">SEND</string>
    <string name="phone_number">Phone Number:</string>
    <string name="mpn">Minutes per nag:</string>
    <string name="stopSpammingLabel">STOP DA SPAM!</string>
    <string name="initSpamToast">Initiating SPAM!</string>
    <string name="stopSpamToast">Stopping the spam.</string>
    <string name="failedValidationToast">Please fill all fields correctly!</string>
    <string name="concurrent_alarm">There seems to be another alarm running.
        You will have to stop it before you can create a new one.</string>

</resources>
