<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ff00d8ff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/appTitle"
                android:id="@+id/appTitle"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:id="@+id/textView"
                android:padding="5dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/message"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:hint="Must be 5 or more characters okay!" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:id="@+id/textView2"
                android:padding="5dp"
                android:textSize="20sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/phoneNumber"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:hint="1231231234" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mpn"
                android:id="@+id/textView3"
                android:padding="5dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/minutes"
                android:inputType="number"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/sendBtn"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="24sp"
        android:background="#e2fffb82" />

</RelativeLayout>
